2010-10-17  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] Layout tests for fix focusing of control elements on mouse click.
        https://bugs.webkit.org/show_bug.cgi?id=40641

        * fast/events/click-focus-control-expected.txt: Added.
        * fast/events/click-focus-control.html: Added.
        * platform/mac/fast/events/click-focus-control-expected.txt: Added.
        * platform/win/Skipped:
2010-10-17  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] Fix focusing of control elements on mouse click.
        Brings GTK fix to Qt platform.
        https://bugs.webkit.org/show_bug.cgi?id=40641

        Test: fast/events/click-focus-control.html

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::isMouseFocusable):

Canonical link: https://commits.webkit.org/60494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69925 268f45cc-cd09-0410-ab3c-d52691b4dbfc